--- a/Css/index.css
+++ b/Css/index.css
@@ -62,8 +62,14 @@ height:250px;
 /*about--begin*/
 .img-responsive {
     width:100%;
-    height:170px;
+    height:160px;
 
+}
+
+@media (max-width:480px) {
+    .img-responsive {
+    height:100px;
+}
 }
 /*about--end*/
 
@@ -72,6 +78,12 @@ height:250px;
 .imgcontainer {
     position:relative;
 }
+.imgcontainer > img {
+    width:70%;
+    height:300px;
+}
+
+
 .imgname {
     position:absolute;
     bottom:0;
@@ -134,6 +146,24 @@ height:250px;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+
+  @media(max-width:768px) {
+   .imgcontainer > img {
+    width:90%;
+    height:200px;
+}
+    .portfolio-info>h3 {
+    font-size:15px;
+    
+    }
+}
+   @media(max-width:468px) {
+   .portfolio-item {
+  height:120px;
+}
+  
 }
 
 /*product--end*/
